--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="/assets/jb/app.js" defer></script>
     <title>Country Search</title>
 </head>
 <body>
     <div class="container">
-        <h1>Country Search</h1>
+        <h2>Country Search</h2>
         <input type="text" id="countryInput" placeholder="Enter country name (e.g., United)">
         <button id="searchButton">Search</button>
         <button id="allButton">Show All Countries</button>
         
         <!-- Results Section -->
-        <h2>Results</h2>
-        <table id="resultsTable">
+        <h3>Results</h3>
+        <table id="resultsTable" class="table table-striped">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -27,14 +28,16 @@
                 <!-- Results will go here -->
             </tbody>
         </table>
+        <hr>
 
         <!-- Statistics Section -->
-        <h2>Statistics</h2>
+        <h3>Statistics</h3>
         <p id="stats">No data to display</p>
+        <hr> 
         
         <!-- Population Table -->
         <h3>Country Population</h3>
-        <table id="populationTable">
+        <table id="populationTable" class="table table-striped">
             <thead>
                 <tr>
                     <th>Country</th>
@@ -45,10 +48,11 @@
                 <!-- Population data will be populated here -->
             </tbody>
         </table>
+        <hr>
 
         <!-- Region Table -->
         <h3>Countries by Region</h3>
-        <table id="regionTable">
+        <table id="regionTable" class="table table-striped">
             <thead>
                 <tr>
                     <th>Region</th>
@@ -59,18 +63,19 @@
                 <!-- Region data will be populated here -->
             </tbody>
         </table>
+        <hr>
 
         <!-- Currency Table -->
-        <h2>Currencies</h2>
-        <table id="currencyTable">
+        <h3>Currencies</h3>
+        <table id="languageTable" class="table table-striped">
             <thead>
                 <tr>
-                    <th>Currency</th>
+                    <th>Language</th>
                     <th>Number of Countries Using</th>
                 </tr>
             </thead>
             <tbody>
-                <!-- Currency data will be populated here -->
+                <!-- Language data will be populated here -->
             </tbody>
         </table>
     </div>
