--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         </table>
         <hr>
 
-        <!-- Currency Table -->
-        <h3>Currencies</h3>
+        <!-- Language Table -->
+        <h3>Languages</h3>
         <table id="languageTable" class="table table-striped">
             <thead>
                 <tr>
